# bafiOS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  background  bits16.json  bits32-I.json  exec.db  icon.tga  icons.db  make.bat  rust-toolchain.toml  users.db  wallpaper.tga
.cargo/: config.toml
bafioDb/: Cargo.toml
bafioDb/src/: lib.rs
bootloader/: Cargo.toml  linker.ld
bootloader/.cargo/: config.toml
bootloader/src/: disk.rs  main.rs  stage1.asm
exec/: Cargo.toml
exec/src/: main.rs
filemanager/: Cargo.toml
filemanager/src/: main.rs
icons/: angry_emoji.tga  cat0.tga  cat1.tga  cat2.tga  cool_emoji.tga  dumb_emoji.tga  elf.tga  file.tga  folder.tga  folder2.tga  generic_emoji.tga  haxxor_emoji.tga  hdd.tga  hepy_emoji.tga  sad_emoji.tga  terminal.tga  tga.tga
ide/: Cargo.toml
ide/src/: main.rs
img/: Cargo.toml
img/src/: main.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: composer.rs  disk.rs  display.rs  dma.rs  exceptions.rs  heap.rs  idt.rs  keyboard.rs  main.rs  mouse.rs  pci.rs  pic.rs  pmm.rs  rtc.rs  task.rs  tss.rs
kui/: Cargo.toml
kui/src/: draw.rs  lib.rs  psf.rs  targa.rs  widgets.rs
libk/: Cargo.toml
libk/src/: boot.rs  elf.rs  hash.rs  hashmap.rs  heap.rs  io.rs  lib.rs  mmio.rs  mutex.rs  net.rs  packets.rs  port.rs  rng.rs  serial.rs  syscall.rs
login/: Cargo.toml
proc1/: Cargo.toml
stage2/: Cargo.toml  linker.ld
stage3/: Cargo.toml  linker.ld
terminal/: Cargo.toml
userland/: Cargo.toml  [bits32-I].json
userland/.cargo/: config.toml
userland/src/: main.rs
(+20 files in other folders)
